feature scaling on AGE and FARE

--- a/Titanic solution.ipynb
+++ b/Titanic solution.ipynb
@@ -6086,6 +6086,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      int64\n",
+       "Survived         int64\n",
+       "Age            float64\n",
+       "Fare           float64\n",
+       "female           uint8\n",
+       "male             uint8\n",
+       "C                uint8\n",
+       "Q                uint8\n",
+       "S                uint8\n",
+       "1                uint8\n",
+       "2                uint8\n",
+       "3                uint8\n",
+       "0                uint8\n",
+       "1                uint8\n",
+       "2                uint8\n",
+       "3                uint8\n",
+       "4                uint8\n",
+       "5                uint8\n",
+       "8                uint8\n",
+       "0                uint8\n",
+       "1                uint8\n",
+       "2                uint8\n",
+       "3                uint8\n",
+       "4                uint8\n",
+       "5                uint8\n",
+       "6                uint8\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "G5KH4jNt6Nc3"
